// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ButtonPill /> snapshot should match snapshot 1`] = `
<ButtonGroup>
  <div
    className="md-button-group-wrapper"
    data-round={false}
    data-spaced={false}
  >
    <ButtonPill
      key="0"
    >
      <ButtonSimple
        className="md-button-pill-wrapper"
        data-color="primary"
        data-disabled={false}
        data-ghost={false}
        data-outline={false}
        data-size={40}
        data-solid={false}
      >
        <FocusRing>
          <FocusRing
            focusClass="md-focus-ring-wrapper children"
            focusRingClass="md-focus-ring-wrapper children"
          >
            <button
              className="md-button-pill-wrapper"
              data-color="primary"
              data-disabled={false}
              data-ghost={false}
              data-outline={false}
              data-size={40}
              data-solid={false}
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              type="button"
            >
              Example A
            </button>
          </FocusRing>
        </FocusRing>
      </ButtonSimple>
    </ButtonPill>
    <ButtonCircle
      key="1"
    >
      <ButtonSimple
        className="md-button-circle-wrapper"
        data-color="primary"
        data-disabled={false}
        data-ghost={false}
        data-multiple-children={false}
        data-outline={false}
        data-size={40}
      >
        <FocusRing>
          <FocusRing
            focusClass="md-focus-ring-wrapper children"
            focusRingClass="md-focus-ring-wrapper children"
          >
            <button
              className="md-button-circle-wrapper"
              data-color="primary"
              data-disabled={false}
              data-ghost={false}
              data-multiple-children={false}
              data-outline={false}
              data-size={40}
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              type="button"
            >
              A
            </button>
          </FocusRing>
        </FocusRing>
      </ButtonSimple>
    </ButtonCircle>
  </div>
</ButtonGroup>
`;

exports[`<ButtonPill /> snapshot should match snapshot when spaced 1`] = `
<ButtonGroup
  spaced={true}
>
  <div
    className="md-button-group-wrapper"
    data-round={false}
    data-spaced={true}
  >
    <ButtonPill
      key="0"
    >
      <ButtonSimple
        className="md-button-pill-wrapper"
        data-color="primary"
        data-disabled={false}
        data-ghost={false}
        data-outline={false}
        data-size={40}
        data-solid={false}
      >
        <FocusRing>
          <FocusRing
            focusClass="md-focus-ring-wrapper children"
            focusRingClass="md-focus-ring-wrapper children"
          >
            <button
              className="md-button-pill-wrapper"
              data-color="primary"
              data-disabled={false}
              data-ghost={false}
              data-outline={false}
              data-size={40}
              data-solid={false}
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              type="button"
            >
              Example A
            </button>
          </FocusRing>
        </FocusRing>
      </ButtonSimple>
    </ButtonPill>
    <ButtonCircle
      key="1"
    >
      <ButtonSimple
        className="md-button-circle-wrapper"
        data-color="primary"
        data-disabled={false}
        data-ghost={false}
        data-multiple-children={false}
        data-outline={false}
        data-size={40}
      >
        <FocusRing>
          <FocusRing
            focusClass="md-focus-ring-wrapper children"
            focusRingClass="md-focus-ring-wrapper children"
          >
            <button
              className="md-button-circle-wrapper"
              data-color="primary"
              data-disabled={false}
              data-ghost={false}
              data-multiple-children={false}
              data-outline={false}
              data-size={40}
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              type="button"
            >
              A
            </button>
          </FocusRing>
        </FocusRing>
      </ButtonSimple>
    </ButtonCircle>
  </div>
</ButtonGroup>
`;

exports[`<ButtonPill /> snapshot should match snapshot with className 1`] = `
<ButtonCircle
  className="example-class"
>
  <ButtonSimple
    className="md-button-circle-wrapper example-class"
    data-color="primary"
    data-disabled={false}
    data-ghost={false}
    data-multiple-children={false}
    data-outline={false}
    data-size={40}
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-button-circle-wrapper example-class"
          data-color="primary"
          data-disabled={false}
          data-ghost={false}
          data-multiple-children={false}
          data-outline={false}
          data-size={40}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        />
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</ButtonCircle>
`;

exports[`<ButtonPill /> snapshot should match snapshot with id 1`] = `
<ButtonCircle
  id="example-id"
>
  <ButtonSimple
    className="md-button-circle-wrapper"
    data-color="primary"
    data-disabled={false}
    data-ghost={false}
    data-multiple-children={false}
    data-outline={false}
    data-size={40}
    id="example-id"
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-button-circle-wrapper"
          data-color="primary"
          data-disabled={false}
          data-ghost={false}
          data-multiple-children={false}
          data-outline={false}
          data-size={40}
          id="example-id"
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        />
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</ButtonCircle>
`;

exports[`<ButtonPill /> snapshot should match snapshot with round 1`] = `
<ButtonGroup
  round={true}
>
  <div
    className="md-button-group-wrapper"
    data-round={true}
    data-spaced={false}
  >
    <ButtonPill
      key="0"
    >
      <ButtonSimple
        className="md-button-pill-wrapper"
        data-color="primary"
        data-disabled={false}
        data-ghost={false}
        data-outline={false}
        data-size={40}
        data-solid={false}
      >
        <FocusRing>
          <FocusRing
            focusClass="md-focus-ring-wrapper children"
            focusRingClass="md-focus-ring-wrapper children"
          >
            <button
              className="md-button-pill-wrapper"
              data-color="primary"
              data-disabled={false}
              data-ghost={false}
              data-outline={false}
              data-size={40}
              data-solid={false}
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              type="button"
            >
              Example A
            </button>
          </FocusRing>
        </FocusRing>
      </ButtonSimple>
    </ButtonPill>
    <ButtonCircle
      key="1"
    >
      <ButtonSimple
        className="md-button-circle-wrapper"
        data-color="primary"
        data-disabled={false}
        data-ghost={false}
        data-multiple-children={false}
        data-outline={false}
        data-size={40}
      >
        <FocusRing>
          <FocusRing
            focusClass="md-focus-ring-wrapper children"
            focusRingClass="md-focus-ring-wrapper children"
          >
            <button
              className="md-button-circle-wrapper"
              data-color="primary"
              data-disabled={false}
              data-ghost={false}
              data-multiple-children={false}
              data-outline={false}
              data-size={40}
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              type="button"
            >
              A
            </button>
          </FocusRing>
        </FocusRing>
      </ButtonSimple>
    </ButtonCircle>
  </div>
</ButtonGroup>
`;

exports[`<ButtonPill /> snapshot should match snapshot with style 1`] = `
<ButtonCircle
  style={
    Object {
      "color": "pink",
    }
  }
>
  <ButtonSimple
    className="md-button-circle-wrapper"
    data-color="primary"
    data-disabled={false}
    data-ghost={false}
    data-multiple-children={false}
    data-outline={false}
    data-size={40}
    style={
      Object {
        "color": "pink",
      }
    }
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-button-circle-wrapper"
          data-color="primary"
          data-disabled={false}
          data-ghost={false}
          data-multiple-children={false}
          data-outline={false}
          data-size={40}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          style={
            Object {
              "color": "pink",
            }
          }
          type="button"
        />
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</ButtonCircle>
`;
